--- a/bootstrap/ssr/ssr-manifest.json
+++ b/bootstrap/ssr/ssr-manifest.json
@@ -1,3 +1,39 @@
 {
-  "resources/js/ssr.js": []
+  "\u0000plugin-vue:export-helper": [],
+  "\u0000vite/dynamic-import-helper.js": [],
+  "node_modules/@splidejs/splide/dist/css/splide.min.css": [],
+  "node_modules/photoswipe/dist/photoswipe.css": [],
+  "resources/js/Components/AttributeFilter.vue": [],
+  "resources/js/Components/AttributeFilter.vue?vue&type=style&index=0&scoped=f307d5a6&lang.css": [],
+  "resources/js/Components/Blocks/TextBlock.vue": [
+    "/build/assets/TextBlock-CGKeZuxb.js"
+  ],
+  "resources/js/Components/BlocksRenderer.vue": [],
+  "resources/js/Components/Breadcrumbs.vue": [],
+  "resources/js/Components/CallbackModal.vue": [],
+  "resources/js/Components/CatalogActiveFilters.vue": [],
+  "resources/js/Components/CatalogLanding.vue": [],
+  "resources/js/Components/CatalogProducts.vue": [],
+  "resources/js/Components/CatalogQuickLinks.vue": [],
+  "resources/js/Components/CatalogSidebar.vue": [],
+  "resources/js/Components/OrderModal.vue": [],
+  "resources/js/Components/ProductCart.vue": [],
+  "resources/js/Components/ui/Button.vue": [],
+  "resources/js/Components/ui/Checkbox.vue": [],
+  "resources/js/Components/ui/Image.vue": [],
+  "resources/js/Components/ui/Input.vue": [],
+  "resources/js/Components/ui/Label.vue": [],
+  "resources/js/Components/ui/Textarea.vue": [],
+  "resources/js/Components/ui/Tooltip.vue": [],
+  "resources/js/Components/ui/select.js": [],
+  "resources/js/Composables/useOrderModal.js": [],
+  "resources/js/Composables/usePhoneMask.js": [],
+  "resources/js/Layouts/MainLayout.vue": [],
+  "resources/js/Pages/Catalog/Index.vue": [],
+  "resources/js/Pages/Page/Show.vue": [],
+  "resources/js/Pages/Product/Show.vue": [],
+  "resources/js/Pages/Product/Show.vue?vue&type=style&index=0&scoped=6db90438&lang.css": [],
+  "resources/js/ssr.js": [],
+  "resources/js/utils.js": [],
+  "vendor/tightenco/ziggy/dist/index.js": []
 }
