--- a/.env.production.example
+++ b/.env.production.example
@@ -12,6 +12,10 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=ru_RU
 APP_MAINTENANCE_DRIVER=file
 
+# Docker Ports (non-standard to avoid conflicts with native services)
+APP_PORT=8080
+APP_SSL_PORT=8443
+
 # Database
 DB_CONNECTION=mysql
 DB_HOST=mysql
@@ -25,15 +29,20 @@ CACHE_STORE=redis
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
 
 # Redis
 REDIS_HOST=redis
 REDIS_PASSWORD=
 REDIS_PORT=6379
+REDIS_CLIENT=phpredis
 
 # Meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_KEY=
+MEILISEARCH_NO_ANALYTICS=true
 SCOUT_DRIVER=meilisearch
 SCOUT_QUEUE=true
 
@@ -51,11 +60,26 @@ MAIL_FROM_NAME="${APP_NAME}"
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_LEVEL=warning
+LOG_DEPRECATIONS_CHANNEL=null
+
+# Security
+BCRYPT_ROUNDS=12
 
 # Horizon
 HORIZON_BALANCE_STRATEGY=auto
 HORIZON_BALANCE_MAX_SHIFT=1
 HORIZON_FAST_TERMINATION=false
 
-# Broadcasting (if needed)
+# Broadcasting
 BROADCAST_CONNECTION=log
+
+# Filesystem
+FILESYSTEM_DISK=local
+
+# AWS (if needed)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
