--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,8 +4,8 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     ports:
-      - "${APP_PORT:-80}:80"
-      - "${APP_SSL_PORT:-443}:443"
+      - "${APP_PORT:-8080}:80"
+      - "${APP_SSL_PORT:-8443}:443"
     volumes:
       - ./:/var/www/html:ro
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
@@ -36,6 +36,7 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - REDIS_HOST=redis
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
       - REDIS_PORT=6379
       - MEILISEARCH_HOST=http://meilisearch:7700
       - MEILISEARCH_KEY=${MEILISEARCH_KEY}
@@ -81,7 +82,8 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: |
+        sh -c '[ -z "$REDIS_PASSWORD" ] && redis-cli ping || redis-cli -a "$REDIS_PASSWORD" ping'
       retries: 3
       timeout: 5s
 
