--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,8 +80,8 @@ jobs:
             docker compose -f compose.prod.yaml exec -T app php artisan view:cache
             docker compose -f compose.prod.yaml exec -T app php artisan filament:cache-components
 
-            # Restart Horizon
-            docker compose -f compose.prod.yaml exec -T app php artisan horizon:terminate
+            # Restart Horizon and Scheduler
+            docker compose -f compose.prod.yaml restart horizon scheduler
 
             # Clean up old images
             docker image prune -af
