--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -103,6 +103,7 @@ services:
       dockerfile: Dockerfile
       target: runtime
     restart: unless-stopped
+    user: "${UID:-1000}:${GID:-1000}"
     volumes:
       - ./storage:/var/www/html/storage
       - ./bootstrap/cache:/var/www/html/bootstrap/cache
