--- a/docker/php/www.conf
+++ b/docker/php/www.conf
@@ -1,21 +1,22 @@
 [www]
+
 user = www-data
 group = www-data
+
 listen = 9000
 listen.owner = www-data
 listen.group = www-data
+listen.mode = 0660
 
 pm = dynamic
-pm.max_children = 50
-pm.start_servers = 10
-pm.min_spare_servers = 5
-pm.max_spare_servers = 20
-pm.max_requests = 500
+pm.max_children = 20
+pm.start_servers = 4
+pm.min_spare_servers = 2
+pm.max_spare_servers = 6
 
-; Logging
-catch_workers_output = yes
-php_admin_value[error_log] = /var/www/html/storage/logs/php-fpm.log
-php_admin_flag[log_errors] = on
-
-; Environment variables
 clear_env = no
+
+catch_workers_output = yes
+
+php_admin_value[error_log] = /proc/self/fd/2
+php_admin_flag[log_errors] = on
