--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,25 +13,30 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
 
     steps:
+      # 1. Забираем код
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2. Docker buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Container Registry
+      # 3. Логин в GHCR (ТОЛЬКО для push image)
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
+      # 4. Генерация тегов
+      - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -41,6 +46,7 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
+      # 5. Сборка и push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -51,42 +57,25 @@ jobs:
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
           cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
 
+      # 6. Деплой на сервер (через deploy.sh)
       - name: Deploy to production server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.PROD_HOST }}
           username: ${{ secrets.PROD_USERNAME }}
           key: ${{ secrets.PROD_SSH_KEY }}
-          port: ${{ secrets.PROD_SSH_PORT || 22 }}
+          port: ${{ secrets.PROD_SSH_PORT }}
+          envs: GHCR_PAT,GHCR_USERNAME,APP_PORT,HEALTHCHECK_PATH
           script: |
             cd ${{ secrets.PROD_APP_PATH }}
+            chmod +x deploy.sh
+            ./deploy.sh
 
-            # Pull latest changes
-            git pull origin main
-
-            # Pull latest Docker image
-            echo ${{ secrets.GITHUB_TOKEN }} | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
-            docker compose -f compose.prod.yaml pull
-
-            # Restart containers
-            docker compose -f compose.prod.yaml up -d --force-recreate
-
-            # Run migrations
-            docker compose -f compose.prod.yaml exec -T app php artisan migrate --force
-
-            # Clear and cache config
-            docker compose -f compose.prod.yaml exec -T app php artisan config:cache
-            docker compose -f compose.prod.yaml exec -T app php artisan route:cache
-            docker compose -f compose.prod.yaml exec -T app php artisan view:cache
-            docker compose -f compose.prod.yaml exec -T app php artisan filament:cache-components
-
-            # Restart Horizon and Scheduler
-            docker compose -f compose.prod.yaml restart horizon scheduler
-
-            # Clean up old images
-            docker image prune -af
-
+      # 7. Финальный health-check с GitHub
       - name: Health check
         run: |
-          sleep 10
-          curl -f ${{ secrets.PROD_APP_URL }}/health || exit 1
+          for i in {1..3}; do
+            curl -f ${{ secrets.PROD_APP_URL }}/health && exit 0
+            sleep 5
+          done
+          exit 1
