--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -18,6 +18,7 @@ services:
 
   # PHP-FPM application
   app:
+    image: ghcr.io/${GITHUB_REPOSITORY:-${COMPOSE_PROJECT_NAME}}:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -58,6 +59,7 @@ services:
 
   # Laravel Horizon (Queue Worker)
   horizon:
+    image: ghcr.io/${GITHUB_REPOSITORY:-${COMPOSE_PROJECT_NAME}}:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -98,6 +100,7 @@ services:
 
   # Laravel Scheduler
   scheduler:
+    image: ghcr.io/${GITHUB_REPOSITORY:-${COMPOSE_PROJECT_NAME}}:latest
     build:
       context: .
       dockerfile: Dockerfile
