--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,8 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Docker Deployment (Production)
+GITHUB_REPOSITORY=ano101/alarmstyle
+COMPOSE_PROJECT_NAME=alarmstyle
+
 VITE_APP_NAME="${APP_NAME}"
