--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,15 +19,12 @@ jobs:
       packages: write
 
     steps:
-      # 1. Забираем код
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Docker buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 3. Логин в GHCR (ТОЛЬКО для push image)
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
@@ -35,7 +32,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 4. Генерация тегов
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -46,7 +42,6 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
-      # 5. Сборка и push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -57,22 +52,18 @@ jobs:
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
           cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
 
-      # 6. Деплой на сервер (через deploy.sh)
       - name: Deploy to production server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.PROD_HOST }}
-          username: ${{ secrets.PROD_USERNAME }}
+          username: deploy
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ secrets.PROD_SSH_PORT }}
-          envs: GHCR_PAT,GHCR_USERNAME,APP_PORT,HEALTHCHECK_PATH,GITHUB_REPOSITORY
+          envs: GHCR_PAT,GHCR_USERNAME,APP_PORT,HEALTHCHECK_PATH
           script: |
             cd ${{ secrets.PROD_APP_PATH }}
-            export GITHUB_REPOSITORY="${{ github.repository }}"
-            chmod +x deploy.sh
-            ./deploy.sh
+            bash deploy.sh
 
-      # 7. Финальный health-check с GitHub
       - name: Health check
         run: |
           for i in {1..3}; do
