--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,7 +4,8 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     ports:
-      - "127.0.0.1:${APP_PORT:-8080}:80"
+      - "${APP_PORT:-8080}:80"
+      - "${APP_SSL_PORT:-8443}:443"
     volumes:
       - ./:/var/www/html:ro
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
