--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -9,6 +9,10 @@ server {
 
     index index.php;
 
+    # Trust X-Forwarded-* headers from reverse proxy
+    real_ip_header X-Forwarded-For;
+    set_real_ip_from 0.0.0.0/0;
+
     charset utf-8;
 
     # Logging
@@ -40,6 +44,11 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
+
+        # Forward HTTPS information from reverse proxy
+        fastcgi_param HTTPS $https if_not_empty;
+        fastcgi_param HTTP_X_FORWARDED_PROTO $http_x_forwarded_proto;
+        fastcgi_param HTTP_X_FORWARDED_FOR $http_x_forwarded_for;
 
         # Increase timeouts for long-running requests
         fastcgi_read_timeout 300;
