--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -26,6 +26,7 @@ services:
     restart: unless-stopped
     user: "${UID:-1000}:${GID:-1000}"
     volumes:
+      - ./public:/var/www/html/public
       - ./storage:/var/www/html/storage
       - ./bootstrap/cache:/var/www/html/bootstrap/cache
     environment:
