--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Inertia SSR
+INERTIA_SSR_ENABLED=true
+INERTIA_SSR_URL=http://127.0.0.1:13714
+
 # Docker Deployment (Production)
 GITHUB_REPOSITORY=ano101/alarmstyle
 COMPOSE_PROJECT_NAME=alarmstyle
