--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -47,6 +47,8 @@ services:
       - QUEUE_CONNECTION=redis
       - SESSION_DRIVER=redis
       - CACHE_STORE=redis
+      - INERTIA_SSR_ENABLED=true
+      - INERTIA_SSR_URL=http://ssr:13714
     depends_on:
       mysql:
         condition: service_healthy
@@ -139,6 +141,33 @@ services:
     networks:
       - app-network
     command: ["php", "/var/www/html/artisan", "schedule:work"]
+
+  # Inertia SSR server
+  ssr:
+    image: ghcr.io/${GITHUB_REPOSITORY:-${COMPOSE_PROJECT_NAME}}:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: runtime
+    restart: unless-stopped
+    user: "${UID:-1000}:${GID:-1000}"
+    volumes:
+      - ./storage:/var/www/html/storage
+      - ./bootstrap/cache:/var/www/html/bootstrap/cache
+      - ./bootstrap/ssr:/var/www/html/bootstrap/ssr:ro
+    environment:
+      - APP_ENV=${APP_ENV:-production}
+      - APP_DEBUG=${APP_DEBUG:-false}
+      - APP_KEY=${APP_KEY}
+      - APP_URL=${APP_URL}
+    networks:
+      - app-network
+    command: ["node", "/var/www/html/bootstrap/ssr/ssr.mjs"]
+    healthcheck:
+      test: ["CMD", "php", "/var/www/html/artisan", "inertia:check-ssr"]
+      retries: 3
+      timeout: 5s
+      interval: 30s
 
   # MySQL database
   mysql:
