--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,12 @@ jobs:
             export GHCR_USERNAME="${{ secrets.GHCR_USERNAME }}"
             export GITHUB_REPOSITORY="${{ github.repository }}"
             cd ${{ secrets.PROD_APP_PATH }}
+
+            # Обновляем код из репозитория (важно для compose.prod.yaml!)
+            git fetch origin
+            git reset --hard origin/master
+
+            # Запускаем деплой
             chmod +x deploy.sh
             ./deploy.sh
 
