--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@
 /public/build
 /public/hot
 /public/storage
+/public/css/filament
+/public/fonts/filament
+/public/js/filament
+/public/vendor/livewire
+/bootstrap/ssr
 /resources/js/ziggy.js
 /storage/*.key
 /storage/pail
