--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -1,178 +1,84 @@
+version: "3.9"
+
 name: alarmstyle-prod
 
 services:
-  # ----------------------------
-  # Nginx web server
-  # ----------------------------
-  nginx:
-    image: nginx:alpine
-    restart: unless-stopped
-    ports:
-      - "${APP_PORT:-8080}:80"
-      - "${APP_SSL_PORT:-8443}:443"
+  app:
+    image: ghcr.io/ano101/alarmstyle:latest
+    restart: always
+    env_file:
+      - .env
     volumes:
-      # public из хоста (заполняется через entrypoint app контейнера)
-      - ./public:/var/www/html/public:ro
+      - app-storage:/var/www/html/storage
+    depends_on:
+      - mysql
+      - redis
+      - meilisearch
 
-      # nginx конфиги и логи
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  nginx:
+    image: nginx:1.25-alpine
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
       - ./docker/nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./storage/logs/nginx:/var/log/nginx
+      - app-storage:/var/www/html/storage:ro
     depends_on:
       - app
-    networks:
-      - app-network
 
-  # ----------------------------
-  # PHP-FPM application
-  # ----------------------------
-  app:
-    image: ghcr.io/${GITHUB_REPOSITORY:-${COMPOSE_PROJECT_NAME}}:latest
-    restart: unless-stopped
-    user: "${UID:-1000}:${GID:-1000}"
-    volumes:
-      - ./.env.env:/var/www/html/.env
-      # persistent runtime dirs
-      - ./storage:/var/www/html/storage
-      - ./bootstrap/cache:/var/www/html/bootstrap/cache
-    depends_on:
-      mysql:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      meilisearch:
-        condition: service_healthy
-    networks:
-      - app-network
-    command: ["php-fpm"]
-    # Healthcheck убран - вызывает проблемы в Alpine, PHP-FPM работает стабильно
-
-  # ----------------------------
-  # Laravel Horizon (Queue Worker)
-  # ----------------------------
   horizon:
-    image: ghcr.io/${GITHUB_REPOSITORY:-${COMPOSE_PROJECT_NAME}}:latest
-    restart: unless-stopped
-    user: "${UID:-1000}:${GID:-1000}"
+    image: ghcr.io/ano101/alarmstyle:latest
+    restart: always
+    command: php artisan horizon
+    env_file:
+      - .env
     volumes:
-      - ./.env.env:/var/www/html/.env
-      # ✅ public не обязательно, но можно шарить чтобы одинаковая FS (безопасно)
-      - ./storage:/var/www/html/storage
-      - ./bootstrap/cache:/var/www/html/bootstrap/cache
+      - app-storage:/var/www/html/storage
     depends_on:
-      mysql:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      meilisearch:
-        condition: service_healthy
-    networks:
-      - app-network
-    command: ["php", "/var/www/html/artisan", "horizon"]
+      - app
+      - redis
 
-  # ----------------------------
-  # Laravel Scheduler
-  # ----------------------------
   scheduler:
-    image: ghcr.io/${GITHUB_REPOSITORY:-${COMPOSE_PROJECT_NAME}}:latest
-    restart: unless-stopped
-    user: "${UID:-1000}:${GID:-1000}"
+    image: ghcr.io/ano101/alarmstyle:latest
+    restart: always
+    command: php artisan schedule:work
+    env_file:
+      - .env
     volumes:
-      - ./storage:/var/www/html/storage
-      - ./bootstrap/cache:/var/www/html/bootstrap/cache
-      - ./.env.env:/var/www/html/.env
+      - app-storage:/var/www/html/storage
     depends_on:
-      mysql:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      meilisearch:
-        condition: service_healthy
-    networks:
-      - app-network
-    command: ["php", "/var/www/html/artisan", "schedule:work"]
+      - app
 
-  # ----------------------------
-  # Inertia SSR server
-  # ----------------------------
   ssr:
-    image: ghcr.io/${GITHUB_REPOSITORY:-${COMPOSE_PROJECT_NAME}}:latest
-    restart: unless-stopped
-    user: "${UID:-1000}:${GID:-1000}"
-    volumes:
-      - ./storage:/var/www/html/storage
-      - ./bootstrap/cache:/var/www/html/bootstrap/cache
-    environment:
-      - APP_ENV=${APP_ENV:-production}
-      - APP_DEBUG=${APP_DEBUG:-false}
-      - APP_KEY=${APP_KEY}
-      - APP_URL=${APP_URL}
-    networks:
-      - app-network
-    command: ["node", "/var/www/html/bootstrap/ssr/ssr.js"]
+    image: ghcr.io/ano101/alarmstyle-ssr:latest
+    restart: always
+    env_file:
+      - .env
 
-  # ----------------------------
-  # MySQL database
-  # ----------------------------
   mysql:
-    image: mysql:8.4
-    restart: unless-stopped
+    image: mysql:8.0
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf:ro
-    networks:
-      - app-network
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
-      retries: 3
-      timeout: 5s
 
-  # ----------------------------
-  # Redis cache and queue
-  # ----------------------------
   redis:
-    image: redis:alpine
-    restart: unless-stopped
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-}
-    volumes:
-      - redis-data:/data
-    networks:
-      - app-network
-    healthcheck:
-      test: |
-        sh -c '[ -z "$REDIS_PASSWORD" ] && redis-cli ping || redis-cli -a "$REDIS_PASSWORD" ping'
-      retries: 3
-      timeout: 5s
+    image: redis:7-alpine
+    restart: always
 
-  # ----------------------------
-  # Meilisearch
-  # ----------------------------
   meilisearch:
-    image: getmeili/meilisearch:latest
-    restart: unless-stopped
-    environment:
-      MEILI_MASTER_KEY: ${MEILISEARCH_KEY}
-      MEILI_NO_ANALYTICS: true
-      MEILI_ENV: production
+    image: getmeili/meilisearch:v1.6
+    restart: always
+    env_file:
+      - .env
     volumes:
-      - meilisearch-data:/meili_data
-    networks:
-      - app-network
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--spider", "http://127.0.0.1:7700/health"]
-      retries: 3
-      timeout: 5s
-
-networks:
-  app-network:
-    driver: bridge
+      - meili-data:/meili_data
 
 volumes:
   mysql-data:
-  redis-data:
-  meilisearch-data:
+  meili-data:
+  app-storage:
