--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,69 +1,29 @@
 server {
     listen 80;
-    listen [::]:80;
     server_name _;
+
     root /var/www/html/public;
-
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-
     index index.php;
-
-    # Trust X-Forwarded-* headers from reverse proxy
-    real_ip_header X-Forwarded-For;
-    set_real_ip_from 0.0.0.0/0;
 
     charset utf-8;
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log error;
-
-    # Static files caching
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        access_log off;
-    }
-
-    # Laravel public directory
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Deny access to hidden files
-    location ~ /\. {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-
-    # PHP-FPM
     location ~ \.php$ {
+        include fastcgi_params;
         fastcgi_pass app:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        include fastcgi_params;
-        fastcgi_hide_header X-Powered-By;
-
-        # Forward HTTPS information from reverse proxy
-        fastcgi_param HTTPS $https if_not_empty;
-        fastcgi_param HTTP_X_FORWARDED_PROTO $http_x_forwarded_proto;
-        fastcgi_param HTTP_X_FORWARDED_FOR $http_x_forwarded_for;
-
-        # Increase timeouts for long-running requests
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
         fastcgi_read_timeout 300;
-        fastcgi_send_timeout 300;
-        fastcgi_connect_timeout 300;
     }
 
-    # Deny access to .php files in storage and bootstrap/cache
-    location ~* ^/(storage|bootstrap\/cache)\/.*\.php$ {
+    location ~ /\.(?!well-known).* {
         deny all;
     }
 
-    # Health check endpoint
     location /health {
-        access_log off;
         return 200 "OK\n";
         add_header Content-Type text/plain;
     }
