--- a/infra/compose.prod.yaml
+++ b/infra/compose.prod.yaml
@@ -17,8 +17,8 @@ services:
     ports:
       - "8080:80"
     volumes:
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./docker/nginx/conf.d:/etc/nginx/conf.d:ro
-      - app-storage:/var/www/html/storage:ro
     depends_on:
       - app
 
