--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -7,6 +7,13 @@ server {
 
     charset utf-8;
 
+    # -------------------------------------------------
+    # /img/* — обрабатывается через Laravel
+    # -------------------------------------------------
+    location ^~ /img/ {
+        try_files $uri /index.php?$query_string;
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
