--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,23 +1,38 @@
+upstream inertia_ssr {
+    server alarmstyle-ssr:13714;
+}
+
 server {
     listen 80;
     server_name _;
 
     root /var/www/html/public;
     index index.php;
-
     charset utf-8;
 
-    # -------------------------------------------------
-    # /img/* — обрабатывается через Laravel
-    # -------------------------------------------------
-    location ^~ /img/ {
-        try_files $uri /index.php?$query_string;
+    location /health {
+        return 200 "OK\n";
+        add_header Content-Type text/plain;
     }
 
+    # Статика
+    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+        try_files $uri =404;
+        access_log off;
+        expires 1y;
+    }
+
+    # 👉 ВСЁ остальное — через SSR
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        proxy_pass http://inertia_ssr;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # PHP (fallback, если SSR выключен)
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass app:9000;
@@ -28,10 +43,5 @@ server {
 
     location ~ /\.(?!well-known).* {
         deny all;
-    }
-
-    location /health {
-        return 200 "OK\n";
-        add_header Content-Type text/plain;
     }
 }
