--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+# На production ОБЯЗАТЕЛЬНО используйте HTTPS URL (например: https://alarmstyle.ru)
+# Это необходимо для корректной генерации ссылок Laravel и Ziggy routes
 APP_URL=http://localhost
 
 APP_LOCALE=en
