--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/scout": "^10.22",
         "laravel/tinker": "^2.10.1",
         "meilisearch/meilisearch-php": "^1.16",
+        "naturalgroove/laravel-filament-rich-editor-source-ai": "^1.0",
         "symfony/dom-crawler": "^8.0",
         "tightenco/ziggy": "^2.6"
     },
